# global-data-toolkit

./: .gitignore  404.html  LICENSE  README.md  env.yml  index.html  main.py  mkdocs.yml  objects.inv  project-notes.md  pyproject.toml  sitemap.xml
dataset/: README.md  csvfieldmap.py
docs/: index.md
docs/dev/: project-notes.md
example_notebooks/bycountry/: dataloader.ipynb
notebooks/: sample_open_ml_dataset.ipynb
reference/globaldatatoolkit/: index.html
reference/globaldatatoolkit/dataloaders/: index.html
reference/globaldatatoolkit/dataloaders/bycountry/: index.html
search/: search_index.json
src/globalclimateanalysis/dataset/: bycountry.py  csvfieldmap.py
src/globalclimateanalysis/test/: test_csvfieldmap.py
src/globaldatatoolkit/: __init__.py
src/globaldatatoolkit/dataloaders/: __init__.py  bycountry.py
tests/dataloaders/: test_bycountry.py  test_csvfieldmap.py
tests/dataloaders/bycountry/: README.md  valid_csv_8_countries.csv
tests/dataset/: test_bycountry.py
tests/dataset/bycountry/: README.md
