[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "globaldatatoolkit"
requires-python = ">= 3.0"
description = "Modules for simplifying processes such as data loading for global datasets."
readme = "README.md"
version = "0.1.0.dev0"

[tool.setuptools.packages.find]
where = ["src"] # find and index packages from src/

[tool.setuptools.package-dir]
"" = "src" # map root package dir to scr/

[tool.basedpyright]
venvPath = " /opt/miniconda3/envs"
venv = "global-data-toolkit"

[tool.basedpyright.analysis]
typeCheckingMode = "standard"
autoSearchPaths = true
useLibraryCodeForTypes = true
